--- a/views_field_select_filter.info.yml
+++ b/views_field_select_filter.info.yml
@@ -2,6 +2,7 @@ name: Field Select Filter
 type: module
 description: Views select filter based on the unique values of a single field.
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: Views
 dependencies:
   - views
